--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,37 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bunx --bun next dev",
-    "build": "bunx --bun next build",
-    "start": "bunx --bun next start",
-    "lint": "bunx --bun next lint",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/server": "^4.10.5",
     "@as-integrations/next": "^3.1.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
-    "@types/pg": "^8.11.6",
     "drizzle-orm": "^0.32.1",
-    "shared": "*",
-    "graphql": "^16.9.0",
-    "graphql-tag": "^2.12.6",
     "lucia": "^3.2.0",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
-    "react-dom": "^18",
-    "server-only": "^0.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.4"
+    "typescript": "^5"
   }
 }
