--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,7 +12,8 @@
     "@apollo/server": "^4.10.5",
     "@as-integrations/next": "^3.1.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
-    "drizzle-orm": "^0.32.1",
+    "drizzle-orm": "^0.33.0",
+    "graphql": "^16.9.0",
     "lucia": "^3.2.0",
     "next": "14.2.5",
     "pg": "^8.12.0",
@@ -25,6 +26,7 @@
     "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.24.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
