--- a/apps/eight/package.json
+++ b/apps/eight/package.json
@@ -15,6 +15,8 @@
         "preset": "jest-expo"
     },
     "dependencies": {
+        "shared": "*",
+        "@apollo/client": "^3.11.4",
         "@expo/metro-runtime": "~3.2.1",
         "@expo/vector-icons": "^14.0.2",
         "@react-navigation/native": "^6.0.2",
@@ -28,6 +30,7 @@
         "expo-status-bar": "~1.12.1",
         "expo-system-ui": "~3.0.7",
         "expo-web-browser": "~13.0.3",
+        "graphql": "^16.9.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.74.5",
