--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "server",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@apollo/server": "^4.10.5",
-    "@as-integrations/next": "^3.1.0",
-    "@lucia-auth/adapter-drizzle": "^1.0.7",
-    "arctic": "^1.9.2",
-    "drizzle-orm": "^0.33.0",
-    "graphql": "^16.9.0",
-    "lucia": "^3.2.0",
-    "next": "14.2.5",
-    "pg": "^8.12.0",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.1.6",
-    "@types/node": "^20",
-    "@types/pg": "^8.11.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "drizzle-kit": "^0.24.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "server",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@eight/shared": "*",
+        "@apollo/server": "^4.10.5",
+        "@as-integrations/next": "^3.1.0",
+        "@lucia-auth/adapter-drizzle": "^1.0.7",
+        "arctic": "^1.9.2",
+        "drizzle-orm": "^0.33.0",
+        "graphql": "^16.9.0",
+        "lucia": "^3.2.0",
+        "next": "14.2.5",
+        "pg": "^8.12.0",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@types/bun": "^1.1.6",
+        "@types/node": "^20",
+        "@types/pg": "^8.11.6",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "drizzle-kit": "^0.24.0",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.5",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
