--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@eight/shared": "*",
 		"@eight/ui": "*",
+		"@fontsource-variable/raleway": "^5.0.21",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@sveltejs/kit": "^2.0.0",
