--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -38,6 +38,7 @@
 		"qrcode": "^1.5.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-maplibre": "^0.9.13",
 		"svelte-sonner": "^0.3.27",
 		"tailwindcss": "^3.4.10",
 		"typescript": "^5.0.0",
