--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -27,6 +27,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"leaflet": "^1.9.4",
 		"lucia": "^3.2.0",
 		"lucide-svelte": "^0.435.0",
 		"mode-watcher": "^0.4.1",
@@ -38,7 +39,6 @@
 		"qrcode": "^1.5.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"svelte-maplibre": "^0.9.13",
 		"svelte-sonner": "^0.3.27",
 		"tailwindcss": "^3.4.10",
 		"typescript": "^5.0.0",
