--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "cSpell.words": ["Raleway", "trpc"]
+    "cSpell.words": [
+        "latlng",
+        "locationerror",
+        "locationfound",
+        "Raleway",
+        "sonner",
+        "trpc"
+    ]
 }
